<resources>
    <string name="app_name">Rehapp</string>
    <string name="main_title_button">ℝ𝕖𝕙𝕒𝕡𝕡</string>
    <string name="main_profile_button">Perfil</string>
    <string name="main_exercices_button">Ejercicios</string>
    <string name="main_progress_button">Progreso</string>
    <string name="UserName">Martin Garrix</string>
    <string name="profile_age_title">EDAD</string>
    <string name="profile_age_value">18</string>
    <string name="profile_height_title">ALTURA</string>
    <string name="profile_height_value">189</string>
    <string name="profile_weight_title">PESO</string>
    <string name="profile_weight_value">82</string>
    <string name="profile_IMC_title">IMC</string>
    <string name="profile_IMC_value">Default IMC</string>
    <string name="profile_chair_title">SILLA DE RUEDAS</string>
    <string name="profile_wheel_value">NO</string>
    <string name="titulo_articulaciones">SELECCIONE LA ARTICULACIÓN</string>
    <string name="profile_title">Nombre</string>
    <string name="profile_edit_bt">EDITAR</string>
    <string name="edit_profile_save">Guardar</string>
    <string name="global_cancel">X</string>
    <string name="main_settings_bt">Ajustes</string>
    <string name="stt_notify_title">Notificaciones</string>
    <string name="stt_sound_title">Sonido</string>
    <string name="progress_main_title">Resumen de ejercicios</string>
    <string name="age_unit">años</string>
    <string name="height_units">cm</string>
    <string name="weight_units">kg</string>
    <string name="main_copy">Copyright RehabApp Industries</string>
    <string name="ec_wait_unit">sec</string>
    <string name="ec_wait_value">12</string>
    <string name="ec_wait_title">Tiempo de descanso:</string>
    <string name="ec_ser_value">12</string>
    <string name="e_ser_title">Número de Series:</string>
    <string name="ec_rep_value">12</string>
    <string name="ec_rep_title">Número de Repeticiones:</string>
    <string name="ec_description">En este ejercicio realizaremos una serie de movimientos para el hombro</string>
    <string name="ec_main_title">EXAMPLE EXERCICE</string>
    <string name="profile_sex_title">Sexo</string>
    <string name="profile_sex_value">Hombre</string>
    <string name="global_returnbt_desc">Return Button</string>
    <string name="stt_pswd_bt">Cambiar Contraseña</string>
    <string name="stt_logout">Cerrar Sesión</string>
    <string name="main_profile_img_desc">Profile Image</string>
    <string name="titulo_cambiar_contrasena">Cambiar contraseña</string>
    <string name="pswd_confirm_bt">Confirmar</string>
    <string name="pswd_repeat_value">Repetir contraseña</string>
    <string name="pswd_new_value">Contraseña nueva</string>
    <string name="pswd_old_value">Contraseña antigua</string>
    <string name="login_main_title">Iniciar Sesión</string>
    <string name="login_insert_user">Cuenta de correo</string>
    <string name="login_insert_pass">Contraseña</string>
    <string name="login_forgot_pass">¿Has olvidado tu contraseña?</string>
    <string name="login_login_bt">Iniciar Sesión</string>
    <string name="login_register_text">¿No tienes una cuenta?</string>
    <string name="login_register_bt">Registrate</string>
    <string name="register_main_title">Crear Cuenta</string>
    <string name="register_have_account">¿Ya tienes una cuenta?</string>
    <string name="register_login_go">Inicia Sesión</string>
    <string name="register_repeat_pass">Confirmar Contraseña</string>
    <string name="register_mail">E-mail</string>
    <string name="register_password">Contraseña</string>
    <string name="register_username">Usuario</string>
    <string name="recover_main_title">¿Has olvidado tu contraseña?</string>
    <string name="recover_insert_title">Introduce tu correo y te mandaremos una nueva</string>
    <string name="recover_insert_value">Correo electrónico</string>
    <string name="recover_send_bt">Enviar</string>
    <string name="register_go_button">Registrarse</string>
    <string name="progress_select_date">Cambiar fecha</string>
    <string name="main_exercice_select_button">Seleccionar musculo</string>
    <string name="select_static_header">Selecciona una estadística</string>
    <string name="select_representation_type_txt">Selecciona como quieres visualizar:</string>
    <string name="titulo_medicinas">MEDICINAS</string>
    <string name="escoger_medicinas">Escoger medicinas:</string>
    <string-array name="Medicinas">
        <item>Seleccione:</item>
        <item>Analgesico</item>
        <item>Antiinflamatorio</item>
        <item>Relajante</item>
        <item>Afavorecidor de circulacion</item>
        <item>Antitrombotico</item>
    </string-array>
    <string-array name="Datas">
        <item>Día</item>
        <item>Semana</item>
        <item>Mes</item>
    </string-array>
</resources>
