<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:layout_marginTop="30dp"
    tools:context=".view.ProfileActivity">


    <TextView
        android:id="@+id/textView_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserName"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textView_Age_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/profile_age_title"
            />

        <TextView
            android:id="@+id/textView_Age_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_age_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textView_Height_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/profile_height_title" />

        <TextView
            android:id="@+id/textView_Height_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_height_value"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/TextView_Weight_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginRight="30dp"
            android:text="@string/profile_weight_title"
            />

        <TextView
            android:id="@+id/textView_Weight_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_weight_value"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/TextView_IMC_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_IMC_title"
            android:layout_marginRight="30dp"
            />

        <TextView
            android:id="@+id/textView_IMC_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_IMC_value"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/TextView_WheelChair_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_chair_title"
            android:layout_marginRight="30dp"
            />

        <TextView
            android:id="@+id/textView_WheelChair_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_wheel_value"
            />
    </LinearLayout>




</LinearLayout>