<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PlayExerciceActivity">

    <ImageButton
        android:id="@+id/global_return_bt"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/img_return"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="407dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/global_cancel"
        android:onClick="returnToMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ce_main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ce_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ec_main_title"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ce_descripction_txt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/ec_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ce_title_txt" />

        <TextView
            android:id="@+id/ce_num_rep_txt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/ec_rep_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ce_descripction_txt" />

        <TextView
            android:id="@+id/ce_num_rep_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/ec_rep_value"
            app:layout_constraintStart_toEndOf="@+id/ce_num_rep_txt"
            app:layout_constraintTop_toBottomOf="@+id/ce_descripction_txt" />

        <TextView
            android:id="@+id/ce_num_ser_txt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/e_ser_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ce_num_rep_txt" />

        <TextView
            android:id="@+id/ce_num_ser_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/ec_ser_value"
            app:layout_constraintStart_toEndOf="@+id/ce_num_ser_txt"
            app:layout_constraintTop_toBottomOf="@+id/ce_num_rep_value" />

        <TextView
            android:id="@+id/ce_num_des_txt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/ec_wait_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ce_num_ser_txt" />

        <TextView
            android:id="@+id/ce_num_des_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/ec_wait_value"
            app:layout_constraintStart_toEndOf="@+id/ce_num_des_txt"
            app:layout_constraintTop_toBottomOf="@+id/ce_num_ser_value" />

        <TextView
            android:id="@+id/ce_num_des_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="25dp"
            android:text="@string/ec_wait_unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ce_num_des_value"
            app:layout_constraintTop_toBottomOf="@+id/ce_num_ser_value" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ce_num_des_txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>