<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".view.ViewExercicesActivity">

    <ImageButton
        android:id="@+id/global_return_bt"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/img_return"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="407dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:onClick="goBack"
        android:background="@android:color/transparent"
        android:contentDescription="@string/global_returnbt_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ce_header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ProgressBar
            android:id="@+id/ce_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:progressDrawable="@drawable/custom_progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ce_fab"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_arrow_forward_black_24dp"
            app:layout_constraintStart_toEndOf="@id/ce_progressBar"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ce_main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/main_button"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ce_header_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ce_info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/ce_title_txt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:shadowColor="@android:color/black"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="15"
                android:text="@string/ec_main_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ce_descripction_txt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ec_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ce_title_txt" />

            <TextView
                android:id="@+id/ce_num_rep_txt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ec_rep_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ce_descripction_txt" />

            <TextView
                android:id="@+id/ce_num_rep_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/ec_rep_value"
                app:layout_constraintStart_toEndOf="@+id/ce_num_rep_txt"
                app:layout_constraintTop_toBottomOf="@+id/ce_descripction_txt" />

            <TextView
                android:id="@+id/ce_num_ser_txt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/e_ser_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ce_num_rep_txt" />

            <TextView
                android:id="@+id/ce_num_ser_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/ec_ser_value"
                app:layout_constraintStart_toEndOf="@+id/ce_num_ser_txt"
                app:layout_constraintTop_toBottomOf="@+id/ce_num_rep_value" />

            <TextView
                android:id="@+id/ce_num_des_txt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ec_wait_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ce_num_ser_txt" />

            <TextView
                android:id="@+id/ce_num_des_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/ec_wait_value"
                app:layout_constraintStart_toEndOf="@+id/ce_num_des_txt"
                app:layout_constraintTop_toBottomOf="@+id/ce_num_ser_value" />

            <TextView
                android:id="@+id/ce_num_des_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/ec_wait_unit"
                app:layout_constraintStart_toEndOf="@+id/ce_num_des_value"
                app:layout_constraintTop_toBottomOf="@+id/ce_num_ser_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <VideoView
            android:id="@+id/ce_videoView"
            android:layout_width="325dp"
            android:layout_height="300dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ce_info_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>